2008-03-04  Benjamin Otte  <otte@gnome.org>

	* common/gmountsource.c: (ask_password_reply),
	(g_mount_source_ask_password_finish),
	(g_mount_source_ask_password), (op_ask_password_reply):
	* common/gmountsource.h:
	add an anonymous_out parameter for anonymous logins.
	* daemon/gvfsbackenddav.c: (soup_authenticate_interactive):
	* daemon/gvfsbackendsftp.c: (handle_login):
	* daemon/gvfsbackendsmb.c: (auth_callback):
	make the backends compile with the new parameter. They don't use
	anonymous logins.
	* daemon/gvfsbackendftp.c: (do_mount):
	make login work as users would expect it with anonymous logins. 
	Fixes bug #520131

2008-03-04  Carlos Garcia Campos  <carlosgc@gnome.org>

	* common/gmountspec.c: (g_mount_spec_copy):
	* daemon/gvfsdaemon.c: (g_vfs_daemon_initiate_mount):
	* daemon/main.c: (main):
	Fix memory leaks.
	
2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.c:
	Avoid duplications in supported_uris.
	
        * daemon/smb-browse.mount.in:
        * daemon/smb.mount.in:
	Add scheme info so smb is listed in supported_uris again.

2008-03-03  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	Remove unecessary message_new_from_xxx functions. Prefix all
	public utility functions that need the backend with
	http_backend_, i.e. rename g_vfs_backend_uri_for_filename() to
	http_backend_uri_for_filename().
	Create http_backend_send_message(), http_backend_queue_message()
	convenience functions which will pick up the right SoupSession.

	* daemon/gvfsbackenddav.c:
	Port to new utility functions and http_backend_xx namespace.
	Clean up error handling and remove the const keyword from most
	SoupURI variables.

2008-03-03  David Zeuthen  <davidz@redhat.com>

	Add write support to gphoto2 backend. Also performance
	enhancements for querying, enumerating and reading.
	Fixes bug #519651

	* daemon/gvfsbackendgphoto2.c: (monitor_proxy_free), (DEBUG),